tests/ui/traits/next-solver/cycles/inductive-not-on-stack.stderr
error[E0275]: overflow evaluating the requirement `(): A`
  --> $DIR/inductive-not-on-stack.rs:41:15
   |
LL |     impls_a::<()>();
   |               ^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`inductive_not_on_stack`)
note: required by a bound in `impls_a`
  --> $DIR/inductive-not-on-stack.rs:25:15
   |
LL | fn impls_a<T: A>() {}
   |               ^ required by this bound in `impls_a`

error[E0275]: overflow evaluating the requirement `(): AR`
  --> $DIR/inductive-not-on-stack.rs:44:16
   |
LL |     impls_ar::<()>();
   |                ^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`inductive_not_on_stack`)
note: required by a bound in `impls_ar`
  --> $DIR/inductive-not-on-stack.rs:38:16
   |
LL | fn impls_ar<T: AR>() {}
   |                ^^ required by this bound in `impls_ar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
